[package]
name = "op-alloy-flz"
description = "Tiny FastLZ compression library"

version = "0.13.0"
edition = "2024"
rust-version = "1.85"
authors = ["Alloy Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/alloy-rs/flz"
repository = "https://github.com/alloy-rs/flz"
exclude = []

[lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[dependencies]
fastlz = { version = "0.1.0", optional = true }

[dev-dependencies]
alloy-primitives = "1.0.0"
rstest = "0.25.0"

[features]
default = []
compress = ["dep:fastlz"]
decompress = ["dep:fastlz"]
